User profile page: Added PM button

--- a/less/frontend.less
+++ b/less/frontend.less
@@ -281,11 +281,17 @@ a:hover { color: @primaryColor; }
     }
 }
 
-/* Forums show_new_posts üage */
+/* Forums show_new_posts page */
 .page-threads.page-forums-threads-new {
     .page-forums();
 }
 
+.page-users-show .details {
+    text-align: center;
+    .actions {
+        margin-top: 20px;
+    }
+}
 
 .widget-latest-threads {
     li { position: relative; }
