--- a/less/backend.less
+++ b/less/backend.less
@@ -337,7 +337,7 @@ header {
                 height: 80px;
                 margin-left: auto;
                 margin-right: auto;
-                background-position: center;
+                background-position: center top;
                 background-repeat: no-repeat;
                 background-size: cover;
                 border-radius: 80px;
