--- a/less/frontend.less
+++ b/less/frontend.less
@@ -117,6 +117,10 @@ a:hover { color: @primaryColor; }
     }
 }
 
+.page-news {
+    .news .image img { max-width: 100% }
+}
+
 .page-videos .video { 
     float: left; width: 33%; text-align: center;
     div { width: 90%; height: 150px; margin-left: auto; margin-right: auto; background-position: center; background-repeat: no-repeat; background-size: cover }
