Friends(hip) module has arrived!

--- a/less/frontend.less
+++ b/less/frontend.less
@@ -305,6 +305,19 @@ a:hover { color: @primaryColor; }
     }
 }
 
+.page-friends {
+    .clearfix();
+    .friend {
+        float: left; box-sizing: border-box; width: 20%; margin-bottom: 20px; padding: 0px 20px; text-align: center;
+        span { display: block; margin-top: 10px; }
+        img { max-width: 100%; max-height: 240px; }
+        .actions { margin-top: 20px; }
+    }
+}
+@media (max-width: @screen-phone) {
+    .page-friends .friend { width: 33% }
+}
+
 .page-messages {
     .message-text {
         word-wrap: break-word; overflow-x: hidden;
