--- a/less/frontend.less
+++ b/less/frontend.less
@@ -183,7 +183,7 @@ a:hover { color: @primaryColor; }
         div > span { display: block }
         .mid { padding-top: 40px; font-size: 30px; }
         .mid .left-win { color: green }
-        .mid .left-lose { color: red }
+        .mid .left-defeat { color: red }
         .mid .left-draw { color: orange }
     }
     .details { margin-bottom: 20px; padding-top: 20px; }
@@ -200,7 +200,7 @@ a:hover { color: @primaryColor; }
     li img { float: left; margin-right: 10px }
     li .scores { position: absolute; right: 0px; top: 0px; }
     li .scores .win { color: green }
-    li .scores .lose { color: red }
+    li .scores .defeat { color: red }
     li .scores .draw { color: orange }
 }
 
