Backend JS: Remember the active module and highlight it in the menu

--- a/less/backend.less
+++ b/less/backend.less
@@ -381,7 +381,7 @@ header {
                         text-align: center;
                     }
                 }
-                a:active {
+                a:active, .item.active {
                     padding-left:  15px;
                     border-left: 5px @blue solid;
                     background-color: darken(@bgblack, 2%);
