Auth module, login page: Style update

--- a/resources/assets/less/frontend.less
+++ b/resources/assets/less/frontend.less
@@ -339,6 +339,11 @@ a:hover { color: @primaryColor; }
     img { max-width: 100% }
 }
 
+.page-auth-login {
+    form { position: relative; }
+    .btn-restore { position: absolute; bottom: 0px; right: 0px; }
+}
+
 /*
  * Mainlayout
  */
