--- a/public/css/backend.css
+++ b/public/css/backend.css
@@ -6686,10 +6686,13 @@ h2.section {
   border: 1px solid #cccccc;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
   -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
   transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  border: 1px solid #f0f0f0;
+  border-radius: 0px;
+  background-color: #f5f5f5;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 .form-group input:focus,
 .form-group select:focus,
