--- a/resources/assets/less/backend.less
+++ b/resources/assets/less/backend.less
@@ -50,6 +50,10 @@ h2.section { margin: 0px 0px 20px 0px; font-size: 14px; font-weight: bold }
     input, select, textarea {
         .form-control();
         &:focus { .focus() }
+        border: 1px solid #f0f0f0;
+        border-radius: 0px;
+        background-color: #f5f5f5;
+        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     }
     input[type=checkbox] { width: auto; height: auto; margin-left: 0px }
     select[multiple] { height: auto; }
