--- a/resources/assets/less/backend.less
+++ b/resources/assets/less/backend.less
@@ -223,6 +223,13 @@ ul.pagination {
     #item_add { margin-top: 20px; }
 }
 
+.page-config-show-log {
+    .item { margin-bottom: 10px; cursor: pointer; }
+    .date { color: @blue; }
+    .stack { display: none; padding: 10px 0px 10px 20px; }
+    .line { margin-bottom: 5px; padding: 5px; border-bottom: 1px solid #ddd; }
+}
+
 .editor-flags {
     img { cursor: pointer }
 }
