--- a/resources/assets/less/backend.less
+++ b/resources/assets/less/backend.less
@@ -446,7 +446,7 @@ header {
 }
 .page-head {
     display: block; margin-bottom: 40px; padding: 20px 0px 20px 40px; border-bottom: 1px solid silver; font-weight: bold; 
-    i { margin-right: 10px; padding: 2px 3px; border-radius: 3px; background-color: @blue; color: white }  
+    i { display: inline-block; min-width: 16px; margin-right: 10px; padding: 2px 3px; border-radius: 3px; background-color: @blue; color: white; text-align: center; }  
 }
 @media (max-width: @screen-phone) {
     .page { margin: 0px 20px; }
