--- a/resources/assets/less/frontend.less
+++ b/resources/assets/less/frontend.less
@@ -309,8 +309,8 @@ a:hover { color: @primaryColor; }
     .clearfix();
     .friend {
         float: left; box-sizing: border-box; width: 20%; margin-bottom: 20px; padding: 0px 20px; text-align: center;
-        span { display: block; margin-top: 10px; }
         img { max-width: 100%; max-height: 240px; }
+        .name { display: block; margin-top: 10px; }
         .actions { margin-top: 20px; }
     }
 }
