--- a/resources/assets/less/backend.less
+++ b/resources/assets/less/backend.less
@@ -73,6 +73,12 @@ h2.section { margin: 0px 0px 20px 0px; font-size: 14px; font-weight: bold }
     }
 }
 
+.image-upload-prev { 
+    margin-bottom: 10px; 
+    img { max-width: 100%; max-height: 32px; transition: all 0.1s linear; }
+    img:hover { max-height: 200px; }
+}
+
 /* Toolbar */
 .toolbar {
     &.top { 
