--- a/resources/assets/less/frontend.less
+++ b/resources/assets/less/frontend.less
@@ -45,6 +45,11 @@ a:hover { color: @primaryColor; }
     textarea { height: auto }
 }
 
+.image-upload-prev { 
+    margin-bottom: 10px; 
+    img { max-width: 100%; }
+}
+
 /* Content filter UI */
 .content-filter-ui {
     select {
